--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h1>Activity Log</h1>
-    <label for="base-url">Enter your base URL:</label>
+    <label for="base-url">Enter your base URL (e.g., https://rmmzine1c40001.infocyte.com):</label>
     <input type="text" id="base-url" placeholder="Base URL">
     <br><br>
     <label for="api-token">Enter your API token:</label>
