--- a/index.html
+++ b/index.html
@@ -1,91 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>JSON Beautifier and Table Viewer</title>
+    <title>JSON Beautifier and DataTable</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
     <style>
         textarea {
             width: 80%;
             height: 200px;
         }
-        table {
-            width: 100%;
+        #output {
             margin-top: 20px;
         }
+        table.dataTable thead th, table.dataTable thead td {
+            padding: 10px 18px;
+            border-bottom: 1px solid #111;
+        }
     </style>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
 </head>
 <body>
-    <h1>JSON Beautifier and Table Viewer</h1>
+    <h1>JSON Beautifier and DataTable</h1>
     <textarea id="inputJson" placeholder="Paste your JSON log entries here"></textarea><br>
-    <button onclick="beautifyJson()">Beautify JSON</button>
-    <div id="output"></div>
-    <table id="jsonTable" class="display">
-        <thead>
-            <tr>
-                <th>Item</th>
-                <th>Action</th>
-                <th>Created On</th>
-                <th>ID</th>
-                <th>User ID</th>
-                <th>Related ID</th>
-                <th>Body</th>
-                <th>Query</th>
-                <th>Params</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <button onclick="processJson()">Process JSON</button>
+    <div id="output">
+        <table id="dataTable" class="display" style="width:100%">
+            <thead>
+                <tr id="tableHead">
+                    <!-- Table headers will be dynamically generated -->
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+                <!-- Table body will be dynamically generated -->
+            </tbody>
+        </table>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
     <script>
-        function beautifyJson() {
+        function processJson() {
             const input = document.getElementById('inputJson').value;
             const outputDiv = document.getElementById('output');
-            const tableBody = document.getElementById('jsonTable').querySelector('tbody');
-            outputDiv.innerHTML = ''; // Clear previous output
-            tableBody.innerHTML = ''; // Clear previous table data
+            const tableHead = document.getElementById('tableHead');
+            const tableBody = document.getElementById('tableBody');
+
+            tableHead.innerHTML = '';
+            tableBody.innerHTML = '';
 
             try {
-                // Regular expression to match individual JSON objects
                 const jsonEntries = input.match(/\{(?:[^{}]|(?:\{[^{}]*\}))*\}/g);
                 if (jsonEntries) {
-                    jsonEntries.forEach(entry => {
-                        try {
-                            const jsonObject = JSON.parse(entry);
-                            const prettyJson = JSON.stringify(jsonObject, null, 2);
-                            const pre = document.createElement('pre');
-                            pre.textContent = prettyJson;
-                            outputDiv.appendChild(pre);
+                    const parsedEntries = jsonEntries.map(entry => JSON.parse(entry));
 
-                            // Add data to the table
-                            const row = tableBody.insertRow();
-                            row.insertCell().textContent = jsonObject.item;
-                            row.insertCell().textContent = jsonObject.action;
-                            row.insertCell().textContent = new Date(jsonObject.createdOn).toLocaleString();
-                            row.insertCell().textContent = jsonObject.id;
-                            row.insertCell().textContent = jsonObject.userId;
-                            row.insertCell().textContent = jsonObject.relatedId;
-                            row.insertCell().textContent = JSON.stringify(jsonObject.body);
-                            row.insertCell().textContent = JSON.stringify(jsonObject.query);
-                            row.insertCell().textContent = JSON.stringify(jsonObject.params);
-                        } catch (e) {
-                            const error = document.createElement('div');
-                            error.textContent = `Invalid JSON: ${entry}`;
-                            error.style.color = 'red';
-                            outputDiv.appendChild(error);
-                        }
+                    // Dynamically generate table headers
+                    const columns = Object.keys(parsedEntries[0]);
+                    columns.forEach(col => {
+                        const th = document.createElement('th');
+                        th.textContent = col;
+                        tableHead.appendChild(th);
                     });
 
-                    // Initialize DataTable
-                    $('#jsonTable').DataTable();
+                    // Populate table body
+                    parsedEntries.forEach(entry => {
+                        const tr = document.createElement('tr');
+                        columns.forEach(col => {
+                            const td = document.createElement('td');
+                            td.textContent = typeof entry[col] === 'object' ? JSON.stringify(entry[col]) : entry[col];
+                            tr.appendChild(td);
+                        });
+                        tableBody.appendChild(tr);
+                    });
+
+                    // Initialize DataTable with filtering
+                    $('#dataTable').DataTable({
+                        destroy: true,
+                        initComplete: function () {
+                            this.api().columns().every(function () {
+                                var column = this;
+                                var select = $('<select><option value=""></option></select>')
+                                    .appendTo($(column.footer()).empty())
+                                    .on('change', function () {
+                                        var val = $.fn.dataTable.util.escapeRegex($(this).val());
+                                        column
+                                            .search(val ? '^' + val + '$' : '', true, false)
+                                            .draw();
+                                    });
+
+                                column.data().unique().sort().each(function (d, j) {
+                                    select.append('<option value="' + d + '">' + d + '</option>');
+                                });
+                            });
+                        }
+                    });
                 } else {
-                    outputDiv.textContent = 'No valid JSON entries found.';
-                    outputDiv.style.color = 'red';
+                    alert('No valid JSON entries found.');
                 }
             } catch (e) {
-                outputDiv.textContent = 'An error occurred while processing the JSON entries.';
-                outputDiv.style.color = 'red';
+                alert('An error occurred while processing the JSON entries.');
             }
         }
     </script>
