--- a/index.html
+++ b/index.html
@@ -1,103 +1,141 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>JSON Beautifier and DataTable</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JSON Log Processor</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1e1e1e;
+            color: #f4f4f4;
+            text-align: center;
+        }
+        h1 {
+            color: #e74c3c;
+        }
         textarea {
             width: 80%;
             height: 200px;
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            border: 1px solid #3498db;
+            padding: 10px;
+            margin-bottom: 20px;
+            resize: none;
         }
-        #output {
-            margin-top: 20px;
+        button {
+            background-color: #e74c3c;
+            color: #ecf0f1;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
         }
-        table.dataTable thead th, table.dataTable thead td {
-            padding: 10px 18px;
-            border-bottom: 1px solid #111;
+        button:hover {
+            background-color: #c0392b;
+        }
+        table.dataTable thead {
+            background-color: #e67e22;
+            color: #ecf0f1;
+        }
+        table.dataTable tbody tr {
+            background-color: #34495e;
+            color: #ecf0f1;
+        }
+        table.dataTable tbody tr:nth-child(odd) {
+            background-color: #2c3e50;
+        }
+        table.dataTable tbody tr:hover {
+            background-color: #e74c3c;
+            color: #ecf0f1;
+        }
+        table.dataTable tbody tr.odd:hover {
+            background-color: #c0392b;
+        }
+        table.dataTable tbody tr.even:hover {
+            background-color: #c0392b;
         }
     </style>
 </head>
 <body>
-    <h1>JSON Beautifier and DataTable</h1>
+    <h1>JSON Log Processor</h1>
     <textarea id="inputJson" placeholder="Paste your JSON log entries here"></textarea><br>
     <button onclick="processJson()">Process JSON</button>
-    <div id="output">
-        <table id="dataTable" class="display" style="width:100%">
-            <thead>
-                <tr id="tableHead">
-                    <!-- Table headers will be dynamically generated -->
-                </tr>
-            </thead>
-            <tbody id="tableBody">
-                <!-- Table body will be dynamically generated -->
-            </tbody>
-        </table>
-    </div>
+    <table id="logTable" class="display" style="width: 100%; margin-top: 20px; display: none;">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>User ID</th>
+                <th>Item</th>
+                <th>Action</th>
+                <th>Related ID</th>
+                <th>Created On</th>
+                <th>Body</th>
+                <th>Query</th>
+                <th>Params</th>
+                <th>User Identity</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script>
         function processJson() {
             const input = document.getElementById('inputJson').value;
-            const outputDiv = document.getElementById('output');
-            const tableHead = document.getElementById('tableHead');
-            const tableBody = document.getElementById('tableBody');
+            const jsonEntries = input.match(/\{(?:[^{}]|(?:\{[^{}]*\}))*\}/g);
+            const table = $('#logTable').DataTable();
+            table.clear();
 
-            tableHead.innerHTML = '';
-            tableBody.innerHTML = '';
-
-            try {
-                const jsonEntries = input.match(/\{(?:[^{}]|(?:\{[^{}]*\}))*\}/g);
-                if (jsonEntries) {
-                    const parsedEntries = jsonEntries.map(entry => JSON.parse(entry));
-
-                    // Dynamically generate table headers
-                    const columns = Object.keys(parsedEntries[0]);
-                    columns.forEach(col => {
-                        const th = document.createElement('th');
-                        th.textContent = col;
-                        tableHead.appendChild(th);
-                    });
-
-                    // Populate table body
-                    parsedEntries.forEach(entry => {
-                        const tr = document.createElement('tr');
-                        columns.forEach(col => {
-                            const td = document.createElement('td');
-                            td.textContent = typeof entry[col] === 'object' ? JSON.stringify(entry[col]) : entry[col];
-                            tr.appendChild(td);
-                        });
-                        tableBody.appendChild(tr);
-                    });
-
-                    // Initialize DataTable with filtering
-                    $('#dataTable').DataTable({
-                        destroy: true,
-                        initComplete: function () {
-                            this.api().columns().every(function () {
-                                var column = this;
-                                var select = $('<select><option value=""></option></select>')
-                                    .appendTo($(column.footer()).empty())
-                                    .on('change', function () {
-                                        var val = $.fn.dataTable.util.escapeRegex($(this).val());
-                                        column
-                                            .search(val ? '^' + val + '$' : '', true, false)
-                                            .draw();
-                                    });
-
-                                column.data().unique().sort().each(function (d, j) {
-                                    select.append('<option value="' + d + '">' + d + '</option>');
-                                });
-                            });
-                        }
-                    });
-                } else {
-                    alert('No valid JSON entries found.');
-                }
-            } catch (e) {
-                alert('An error occurred while processing the JSON entries.');
+            if (jsonEntries) {
+                jsonEntries.forEach(entry => {
+                    try {
+                        const jsonObject = JSON.parse(entry);
+                        table.row.add([
+                            jsonObject.id || '',
+                            jsonObject.userId || '',
+                            jsonObject.item || '',
+                            jsonObject.action || '',
+                            jsonObject.relatedId || '',
+                            jsonObject.createdOn || '',
+                            JSON.stringify(jsonObject.body, null, 2) || '',
+                            JSON.stringify(jsonObject.query, null, 2) || '',
+                            JSON.stringify(jsonObject.params, null, 2) || '',
+                            JSON.stringify(jsonObject.userIdentity, null, 2) || ''
+                        ]);
+                    } catch (e) {
+                        console.error('Invalid JSON entry:', entry);
+                    }
+                });
+                table.draw();
+                document.getElementById('logTable').style.display = 'table';
+            } else {
+                alert('No valid JSON entries found.');
             }
         }
+
+        $(document).ready(function() {
+            $('#logTable').DataTable({
+                columns: [
+                    { title: "ID" },
+                    { title: "User ID" },
+                    { title: "Item" },
+                    { title: "Action" },
+                    { title: "Related ID" },
+                    { title: "Created On" },
+                    { title: "Body" },
+                    { title: "Query" },
+                    { title: "Params" },
+                    { title: "User Identity" }
+                ],
+                searching: true,
+                paging: true,
+                info: true,
+                autoWidth: true
+            });
+        });
     </script>
 </body>
 </html>
