--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@
             text-align: center;
         }
         h1 {
-            color: #e74c3c;
+            color: #ff5733;
         }
         textarea {
             width: 80%;
             height: 200px;
             background-color: #2c3e50;
             color: #ecf0f1;
-            border: 1px solid #3498db;
+            border: 2px solid #3498db;
             padding: 10px;
             margin-bottom: 20px;
             resize: none;
+            border-radius: 5px;
         }
         button {
-            background-color: #e74c3c;
+            background-color: #ff5733;
             color: #ecf0f1;
             border: none;
             padding: 10px 20px;
             cursor: pointer;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #c0392b;
         }
         table.dataTable thead {
-            background-color: #e67e22;
-            color: #ecf0f1;
+            background-color: #ffbe33;
+            color: #1e1e1e;
         }
         table.dataTable tbody tr {
             background-color: #34495e;
@@ -47,7 +51,7 @@
             background-color: #2c3e50;
         }
         table.dataTable tbody tr:hover {
-            background-color: #e74c3c;
+            background-color: #ff5733;
             color: #ecf0f1;
         }
         table.dataTable tbody tr.odd:hover {
@@ -55,6 +59,9 @@
         }
         table.dataTable tbody tr.even:hover {
             background-color: #c0392b;
+        }
+        table.dataTable tbody td {
+            border-top: 1px solid #2c3e50;
         }
     </style>
 </head>
