--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1e1e1e;
-            color: #f4f4f4;
+            background-color: #f0f0f0;
+            color: #333;
             text-align: center;
         }
         h1 {
-            color: #ff5733;
+            color: #333;
         }
         textarea {
             width: 80%;
             height: 200px;
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            border: 2px solid #3498db;
+            background-color: #fff;
+            color: #333;
+            border: 2px solid #ccc;
             padding: 10px;
             margin-bottom: 20px;
             resize: none;
             border-radius: 5px;
         }
         button {
-            background-color: #ff5733;
-            color: #ecf0f1;
+            background-color: #007bff;
+            color: #fff;
             border: none;
             padding: 10px 20px;
             cursor: pointer;
@@ -37,31 +37,31 @@
             transition: background-color 0.3s;
         }
         button:hover {
-            background-color: #c0392b;
+            background-color: #0056b3;
         }
         table.dataTable thead {
-            background-color: #ffbe33;
-            color: #1e1e1e;
+            background-color: #007bff;
+            color: #fff;
         }
         table.dataTable tbody tr {
-            background-color: #34495e;
-            color: #ecf0f1;
+            background-color: #fff;
+            color: #333;
         }
         table.dataTable tbody tr:nth-child(odd) {
-            background-color: #2c3e50;
+            background-color: #f9f9f9;
         }
         table.dataTable tbody tr:hover {
-            background-color: #ff5733;
-            color: #ecf0f1;
+            background-color: #007bff;
+            color: #fff;
         }
         table.dataTable tbody tr.odd:hover {
-            background-color: #c0392b;
+            background-color: #0056b3;
         }
         table.dataTable tbody tr.even:hover {
-            background-color: #c0392b;
+            background-color: #0056b3;
         }
         table.dataTable tbody td {
-            border-top: 1px solid #2c3e50;
+            border-top: 1px solid #ccc;
         }
     </style>
 </head>
@@ -92,35 +92,28 @@
     <script>
         function processJson() {
             const input = document.getElementById('inputJson').value;
-            const jsonEntries = input.match(/\{(?:[^{}]|(?:\{[^{}]*\}))*\}/g);
+            const jsonEntries = input.split('\n').filter(entry => entry.trim() !== '');
             const table = $('#logTable').DataTable();
             table.clear();
 
-            if (jsonEntries) {
-                jsonEntries.forEach(entry => {
-                    try {
-                        const jsonObject = JSON.parse(entry);
-                        table.row.add([
-                            jsonObject.id || '',
-                            jsonObject.userId || '',
-                            jsonObject.item || '',
-                            jsonObject.action || '',
-                            jsonObject.relatedId || '',
-                            jsonObject.createdOn || '',
-                            JSON.stringify(jsonObject.body, null, 2) || '',
-                            JSON.stringify(jsonObject.query, null, 2) || '',
-                            JSON.stringify(jsonObject.params, null, 2) || '',
-                            JSON.stringify(jsonObject.userIdentity, null, 2) || ''
-                        ]);
-                    } catch (e) {
-                        console.error('Invalid JSON entry:', entry);
-                    }
-                });
-                table.draw();
-                document.getElementById('logTable').style.display = 'table';
-            } else {
-                alert('No valid JSON entries found.');
-            }
+            jsonEntries.forEach(entry => {
+                const columns = entry.split('\t');
+                if (columns.length === 10) {
+                    const parsedColumns = columns.map((col, index) => {
+                        try {
+                            return JSON.parse(col);
+                        } catch (e) {
+                            return col;
+                        }
+                    });
+                    table.row.add(parsedColumns);
+                } else {
+                    console.error('Invalid entry:', entry);
+                }
+            });
+
+            table.draw();
+            document.getElementById('logTable').style.display = 'table';
         }
 
         $(document).ready(function() {
