--- a/index.html
+++ b/index.html
@@ -3,139 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Log Processor</title>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-        }
-        textarea {
-            width: 80%;
-            height: 200px;
-            background-color: #fff;
-            color: #333;
-            border: 2px solid #ccc;
-            padding: 10px;
-            margin-bottom: 20px;
-            resize: none;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        table.dataTable thead {
-            background-color: #007bff;
-            color: #fff;
-        }
-        table.dataTable tbody tr {
-            background-color: #fff;
-            color: #333;
-        }
-        table.dataTable tbody tr:nth-child(odd) {
-            background-color: #f9f9f9;
-        }
-        table.dataTable tbody tr:hover {
-            background-color: #007bff;
-            color: #fff;
-        }
-        table.dataTable tbody tr.odd:hover {
-            background-color: #0056b3;
-        }
-        table.dataTable tbody tr.even:hover {
-            background-color: #0056b3;
-        }
-        table.dataTable tbody td {
-            border-top: 1px solid #ccc;
-        }
-    </style>
+    <title>Activity Log Table</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 </head>
 <body>
-    <h1>JSON Log Processor</h1>
-    <textarea id="inputJson" placeholder="Paste your JSON log entries here"></textarea><br>
-    <button onclick="processJson()">Process JSON</button>
-    <table id="logTable" class="display" style="width: 100%; margin-top: 20px; display: none;">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>User ID</th>
-                <th>Item</th>
-                <th>Action</th>
-                <th>Related ID</th>
-                <th>Created On</th>
-                <th>Body</th>
-                <th>Query</th>
-                <th>Params</th>
-                <th>User Identity</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script>
-        function processJson() {
-            const input = document.getElementById('inputJson').value;
-            const jsonEntries = input.split('\n').filter(entry => entry.trim() !== '');
-            const table = $('#logTable').DataTable();
-            table.clear();
-
-            jsonEntries.forEach(entry => {
-                const columns = entry.split('\t');
-                if (columns.length === 10) {
-                    const parsedColumns = columns.map((col, index) => {
-                        try {
-                            return JSON.parse(col);
-                        } catch (e) {
-                            return col;
-                        }
-                    });
-                    table.row.add(parsedColumns);
-                } else {
-                    console.error('Invalid entry:', entry);
-                }
-            });
-
-            table.draw();
-            document.getElementById('logTable').style.display = 'table';
-        }
-
-        $(document).ready(function() {
-            $('#logTable').DataTable({
-                columns: [
-                    { title: "ID" },
-                    { title: "User ID" },
-                    { title: "Item" },
-                    { title: "Action" },
-                    { title: "Related ID" },
-                    { title: "Created On" },
-                    { title: "Body" },
-                    { title: "Query" },
-                    { title: "Params" },
-                    { title: "User Identity" }
-                ],
-                searching: true,
-                paging: true,
-                info: true,
-                autoWidth: true
-            });
-        });
-    </script>
+    <div class="table-container">
+        <table id="activityLogTable" class="display" style="width:100%">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>User</th>
+                    <th>Action</th>
+                    <th>Timestamp</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
