--- a/index.html
+++ b/index.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Log Table</title>
+    <title>JSON Log Processor</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 </head>
 <body>
-    <div class="table-container">
-        <table id="activityLogTable" class="display" style="width:100%">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>User</th>
-                    <th>Action</th>
-                    <th>Timestamp</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <h1>JSON Log Processor</h1>
+    <textarea id="inputJson" placeholder="Paste your JSON log entries here"></textarea><br>
+    <button onclick="processJson()">Process JSON</button>
+    <table id="logTable" class="display" style="width: 100%; margin-top: 20px; display: none;">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>User ID</th>
+                <th>Item</th>
+                <th>Action</th>
+                <th>Related ID</th>
+                <th>Created On</th>
+                <th>Body</th>
+                <th>Query</th>
+                <th>Params</th>
+                <th>User Identity</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
